--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&amp;display=swap"
     rel="stylesheet" media="all">
   <link rel="stylesheet" href="./dist/css/style.min.css">
-  <!-- <link rel="preconnect" href="./dist/img/Upscales.ai_1703632241596.jpeg" fetchpriority="high" as="image" /> -->
   <link rel="preload" fetchpriority="high" as="image" href="/dist/img/mhm-min.jpg" type="image/webp">
-
 
 </head>
 
@@ -183,21 +181,9 @@
 
               </a>
             </div>
-
             <div class="portfolio__project">
               <a href="#">
-                <img src="./dist/img/mhm4.jpg" alt="zdjęcie projektu strony internetowej"
-                  class="portfolio__project-image" loading="lazy">
-                <div class="portfolio__project-items">
-                  <p>Projekt strony</p>
-
-                </div>
-                <div class="gradient-overlay"></div>
-              </a>
-            </div>
-            <div class="portfolio__project">
-              <a href="#">
-                <img src="./dist/img/mhm3.jpg" alt="zdjęcie projektu strony internetowej"
+                <img src="./dist/img/about_image.jpg" alt="zdjęcie projektu strony internetowej"
                   class="portfolio__project-image" loading="lazy">
                 <div class="portfolio__project-items">
                   <p>Projekt strony</p>
@@ -207,6 +193,20 @@
 
               </a>
             </div>
+            <div class="portfolio__project">
+              <a href="#">
+                <img src="./dist/img/about_image.jpg" alt="zdjęcie projektu strony internetowej"
+                  class="portfolio__project-image" loading="lazy">
+                <div class="portfolio__project-items">
+                  <p>Projekt strony</p>
+
+                </div>
+                <div class="gradient-overlay"></div>
+
+              </a>
+            </div>
+
+            
 
           </div>
         </div>
