--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
   <link rel="icon" type="image/x-icon" href="./dist/img/favIcon.png">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&amp;display=swap"
-    rel="stylesheet" media="all">
+    rel="stylesheet">
   <link rel="stylesheet" href="./dist/css/style.min.css">
-  <link rel="preload" fetchpriority="high" as="image" href="/dist/img/mhm-min.jpg" type="image/webp">
+  <link rel="preload" fetchpriority="high" as="image" href="/dist/img/header_small.jpg" type="image/webp">
 
 </head>
 
@@ -24,7 +24,7 @@
       <div class="navbar__content">
 
         <a href="#" class="navbar__logo" aria-label="Przejdź na górę strony">
-          <img src="./dist/img/logoIconColor.png" alt="logo chłopak o brązowych włosach siedzący przed komputerem"
+          <img src="./dist/img/icons/logoIconColor.png" alt="logo chłopak o brązowych włosach siedzący przed komputerem"
             class="navbar__logo-img">
         </a>
 
@@ -51,17 +51,17 @@
             <ul class="navbar__social-mobile">
               <li class="navbar__menu-item">
                 <a href="#" class="navbar__social-link" aria-label="Facebook">
-                  <img src="./dist/img/facebook-round-color-icon.svg" alt="Facebook">
+                  <img src="./dist/img/icons/facebook_icon.svg" alt="Facebook">
                 </a>
               </li>
               <li class="navbar__menu-item">
                 <a href="#" class="navbar__social-link" aria-label="Twitter">
-                  <img src="./dist/img/x-social-media-white-icon.svg" alt="Twitter" class="navbar__socialmedia-icon">
+                  <img src="./dist/img/icons/twitter_icon.svg" alt="Twitter" class="navbar__socialmedia-icon">
                 </a>
               </li>
               <li class="navbar__menu-item">
                 <a href="#" class="navbar__social-link" aria-label="Instagram">
-                  <img src="./dist/img/instagram-white-icon.svg" alt="Instagram">
+                  <img src="./dist/img/icons/instagram_icon.svg" alt="Instagram">
                 </a>
               </li>
             </ul>
@@ -71,17 +71,17 @@
         <ul class="navbar__social">
           <li class="navbar__links-item">
             <a href="#" class="navbar__social-link" aria-label="Facebook">
-              <img src="./dist/img/facebook-round-color-icon.svg" alt="Facebook">
+              <img src="./dist/img/icons/facebook_icon.svg" alt="Facebook">
             </a>
           </li>
           <li class="navbar__links-item">
             <a href="#" class="navbar__social-link" aria-label="Twitter">
-              <img src="./dist/img/x-social-media-white-icon.svg" alt="Twitter" class="navbar__socialmedia-icon">
+              <img src="./dist/img/icons/twitter_icon.svg" alt="Twitter">
             </a>
           </li>
           <li class="navbar__links-item">
             <a href="#" class="navbar__social-link" aria-label="Instagram">
-              <img src="./dist/img/instagram-white-icon.svg" alt="Instagram">
+              <img src="./dist/img/icons/instagram_icon.svg" alt="Instagram">
             </a>
           </li>
         </ul>
@@ -129,7 +129,7 @@
           <div class="about__box-text">
             <div class="section__box">
               <h2 class="section__box-name">O mnie</h2>
-              <h3 class="section__box-heading">Kilka słów o mnie <img src="./dist/img/wave%20(1).png"
+              <h3 class="section__box-heading">Kilka słów o mnie <img src="./dist/img/icons/hand_icon.png"
                   alt="element dekoracyjny emotka machającej ręki" loading="lazy"></h3>
             </div>
             <p>Cześć! Nazywam się John Doe, doświadczony webdeveloper z wieloletnim doświadczeniem w
@@ -144,10 +144,10 @@
         <div class="technologies">
           <h3 class="technologies__heading"><span>Technologie</span> w których pracuję</h3>
           <div class="technologies__box">
-            <img src="./dist/img/html5-01-svgrepo-com.svg" alt="logo HTML" loading="lazy">
-            <img src="./dist/img/css3-01-svgrepo-com.svg" alt="logo CSS" loading="lazy">
-            <img src="./dist/img/javascript-16-svgrepo-com.svg" alt="logo JavaScript" loading="lazy">
-            <img src="./dist/img/sass-svgrepo-com.svg" alt="logo SASS" loading="lazy">
+            <img src="./dist/img/icons/html_icon.svg" alt="logo HTML" loading="lazy">
+            <img src="./dist/img/icons/css_icon.svg" alt="logo CSS" loading="lazy">
+            <img src="./dist/img/icons/javascript_icon.svg" alt="logo JavaScript" loading="lazy">
+            <img src="./dist/img/icons/sass_icon.svg" alt="logo SASS" loading="lazy">
           </div>
         </div>
       </div>
@@ -206,7 +206,7 @@
               </a>
             </div>
 
-            
+
 
           </div>
         </div>
@@ -284,21 +284,21 @@
 
           <div class="services__cards">
             <div class="services__card">
-              <img src="./dist/img/world-wide-web.png" alt="ikonka sieci www" loading="lazy">
+              <img src="./dist/img/icons/graphic-design.png" alt="ikonka sieci www" loading="lazy">
 
               <h4 class="services__card-title">Web development</h4>
               <p class="services__card-description">Tworzymy responsywne, nowoczesne strony internetowe
                 dopasowane do Twoich potrzeb.</p>
             </div>
             <div class="services__card services__card--inactive">
-              <img src="./dist/img/world-wide-web.png" alt="ikonka sieci www" loading="lazy">
+              <img src="./dist/img/icons/online-shop.png" alt="ikonka sieci www" loading="lazy">
 
               <h4 class="services__card-title">Web development</h4>
               <p class="services__card-description">Tworzymy responsywne, nowoczesne strony internetowe
                 dopasowane do Twoich potrzeb.</p>
             </div>
             <div class="services__card services__card--inactive">
-              <img src="./dist/img/world-wide-web.png" alt="ikonka sieci www" loading="lazy">
+              <img src="./dist/img/icons/mobile-development.png" alt="ikonka sieci www" loading="lazy">
 
               <h4 class="services__card-title">Web development</h4>
               <p class="services__card-description">Tworzymy responsywne, nowoczesne strony internetowe
@@ -312,7 +312,7 @@
             <div class="our-priority__cards">
               <div class="our-priority__card">
                 <div class="gradient-overlay"></div>
-                <img src="./dist/img/seo.png" alt="ikonka SEO" loading="lazy">
+                <img src="./dist/img/icons/seo.png" alt="ikonka SEO" loading="lazy">
                 <h4 class="our-priority__card-title">SEO</h4>
                 <p class="our-priority__card-description">Dbamy o skuteczne SEO, aby Twoja strona była
                   łatwo odnajdywana w wynikach
@@ -324,7 +324,7 @@
               <div class="our-priority__card">
                 <div class="gradient-overlay"></div>
 
-                <img src="./dist/img/responsive.png" alt="ikonka tabletu,telefonu i komputera" loading="lazy">
+                <img src="./dist/img/icons/responsive.png" alt="ikonka tabletu,telefonu i komputera" loading="lazy">
                 <h4 class="our-priority__card-title">Responsywność i Dostępność</h4>
                 <p class="our-priority__card-description">Tworzymy responsywne strony, dostosowane do
                   różnych urządzeń i ekranów.
@@ -335,7 +335,7 @@
               <div class="our-priority__card">
                 <div class="gradient-overlay"></div>
 
-                <img src="./dist/img/speedometer.png" alt="ikonka licznika prędkości" loading="lazy">
+                <img src="./dist/img/icons/web_speed.png" alt="ikonka licznika prędkości" loading="lazy">
                 <h4 class="our-priority__card-title">Szybkość Ładowania</h4>
                 <p class="our-priority__card-description">Optymalizujemy prędkość ładowania, eliminując
                   czynniki opóźniające.
@@ -359,20 +359,18 @@
         </div>
         <div class="contact__box">
           <a href="mailto:mojadres@gmail.com" class="contact__email">
-            <img src="./dist/img/email%20(1).png" alt="ikonka email" class="contact__email-icon"
+            <img src="./dist/img/icons/email_icon.png" alt="ikonka email" class="contact__email-icon"
               loading="lazy">mojemail@gmail.com
           </a>
           <div class="contact__box-socialmedia">
             <a href="#">
-              <img src="./dist/img/facebook-round-color-icon.svg" alt="Logo Facebook" class="contact__icon"
-                loading="lazy">
+              <img src="./dist/img/icons/facebook_icon.svg" alt="Logo Facebook" class="contact__icon" loading="lazy">
             </a>
             <a href="#">
-              <img src="./dist/img/instagram-white-icon.svg" alt="Logo Instagram" class="contact__icon" loading="lazy">
+              <img src="./dist/img/icons/instagram_icon.svg" alt="Logo Instagram" class="contact__icon" loading="lazy">
             </a>
             <a href="#">
-              <img src="./dist/img/x-social-media-white-icon.svg" alt="Logo Twitter" class="contact__icon"
-                loading="lazy">
+              <img src="./dist/img/icons/twitter_icon.svg" alt="Logo Twitter" class="contact__icon" loading="lazy">
             </a>
 
           </div>
@@ -385,7 +383,7 @@
   </main>
 
 
-  <a href="#" class="arrow-to-top" aria-label="Przejdź na górę strony"><img src="./dist/img/white-arrow-top.png"
+  <a href="#" class="arrow-to-top" aria-label="Przejdź na górę strony"><img src="./dist/img/icons/white-arrow-top.png"
       alt="biała strzałka" loading="lazy"></a>
 
 
